<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginroot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/new_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/padding_allSide">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="20dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="140dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:src="@drawable/ss" />

        <!--  Email Label -->

        <EditText
            android:id="@+id/et_fullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/icon4"
            android:drawablePadding="5dp"
            android:hint="@string/firstname"
            android:inputType="textCapWords"
            android:imeOptions="actionNext"
            android:padding="@dimen/etpadding"
            android:paddingLeft="10dp"
            android:textSize="@dimen/textsize"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/et_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/icon4"
            android:drawablePadding="5dp"
            android:hint="@string/lastname"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:textSize="@dimen/textsize"
            android:padding="@dimen/etpadding"
            android:paddingLeft="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/icon5"
            android:drawablePadding="5dp"
            android:imeOptions="actionNext"
            android:hint="@string/emial"
            android:inputType="textEmailAddress"
            android:padding="@dimen/etpadding"
            android:textSize="@dimen/textsize"
            android:paddingLeft="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/icon2"
            android:drawablePadding="5dp"
            android:hint="@string/Password"
            android:textSize="@dimen/textsize"
            android:inputType="textPassword"
            android:padding="10dp"
            android:imeOptions="actionNext"
            android:paddingLeft="@dimen/etpadding"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/et_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/icon1"
            android:drawablePadding="5dp"
            android:imeOptions="actionDone"
            android:hint="@string/mobile_number"
            android:inputType="number"
            android:padding="@dimen/etpadding"
            android:textSize="@dimen/textsize"
            android:paddingLeft="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />


        <!--  Password Label -->
        <EditText
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/icon6"
            android:drawablePadding="5dp"
            android:hint="@string/address"
            android:inputType="text"
            android:padding="10dp"
            android:visibility="gone"
            android:paddingLeft="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <LinearLayout
            android:id="@+id/ll_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_white"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/etpadding">

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/icon7"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:textSize="@dimen/textsize"
                android:text="@string/register"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_login_here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left|center"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/textsize"
            android:layout_marginBottom="20dp"
            android:text="@string/login_here"
            android:textColor="@color/white"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right|center"
        android:layout_marginTop="30dp"
        android:text="@string/help"
        android:textColor="@color/white"
        android:textSize="16dip" />
</LinearLayout>

    </ScrollView>
</LinearLayout>