<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorPrimary"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/logoicon" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="3dp"
            android:weightSum="2">

            <LinearLayout
                android:id="@+id/ll_recharge"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/grid_bg"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="4dp">

                <ImageView
                    android:id="@+id/grid_image"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/dash1"></ImageView>

                <TextView
                    android:id="@+id/grid_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:text="@string/recharge1"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp"
                    android:textStyle="bold"></TextView>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_fund"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:background="@drawable/grid_bg"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView

                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/dash2"></ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/fund_trans"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp"
                    android:textStyle="bold"></TextView>
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:weightSum="2">

            <LinearLayout
                android:id="@+id/ll_chat"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/grid_bg"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView

                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/dash7"></ImageView>

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/chat"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp"
                    android:textStyle="bold"></TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_file"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:background="@drawable/grid_bg"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView

                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/dash8"></ImageView>

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/file"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp"
                    android:textStyle="bold"></TextView>
            </LinearLayout>


        </LinearLayout>

        <!--
                <GridView
                    android:id="@+id/grid" android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="0dp"
                    android:verticalSpacing="2dp"
                    android:horizontalSpacing="2dp"
                    android:scrollingCache="true"
                    android:smoothScrollbar="true"
                    android:clipChildren="true"
                    android:alwaysDrawnWithCache="true"
                    android:numColumns="2"
                    android:columnWidth="160dp"
                    android:stretchMode="columnWidth"
                    android:gravity="center_horizontal"
                    android:background="@color/background">
                </GridView>-->


    </LinearLayout>


</LinearLayout>
